# tensix-isa-simulator

./: .gitignore  LICENSE  README.md
tensix/whb0/: CMakeLists.txt  README.md
tensix/whb0/doc/: coverage.md
tensix/whb0/prj/: build_core.sh  build_demo_llk_basic.sh  build_demo_llk_r37.sh  build_demo_llk_ref.sh  build_demo_sfpi_gen.sh  build_llk_api.sh  build_llk_basic.sh  build_llk_compute.sh  build_llk_ref.sh  build_r37_ckernel.sh  build_r37_compute.sh  build_r37_iss.sh  build_r37_llk.sh  build_schedule.sh  build_sfpi.sh
tensix/whb0/src/: CMakeLists.txt
tensix/whb0/src/core/: CMakeLists.txt  addr_mod.hpp  addrmod.cpp  cfg.cpp  cfg_api.cpp  cfg_reg.cpp  gpr_map.hpp  instr_params.hpp  math.cpp  memory.cpp  memory.hpp  pack.cpp  sfpu.cpp  sync.cpp  tdma.cpp  template.hpp  tensix.cpp  tensix.hpp  tensix_types.hpp  thread.cpp  thread.hpp  unpack.cpp
tensix/whb0/src/demo/: CMakeLists.txt
tensix/whb0/src/demo/llk_basic/: CMakeLists.txt  kernels.cpp  kernels.hpp  machine.cpp  machine.hpp  main.cpp  sfpu_test.cpp  sfpu_test.hpp  sfpu_test10.cpp  sfpu_test11.cpp  sfpu_test12.cpp  sfpu_test13.cpp  sfpu_test14.cpp  sfpu_test15.cpp  sfpu_test16.cpp  sfpu_test17.cpp  sfpu_test3.cpp  sfpu_test4.cpp  sfpu_test5.cpp  sfpu_test6.cpp  sfpu_test7.cpp  sfpu_test8.cpp  sfpu_test9.cpp  sfpu_wrap.cpp
tensix/whb0/src/demo/llk_r37/: CMakeLists.txt  bcast_h_add.hpp  bcast_h_add_math.cpp  bcast_h_add_unpack.cpp  bcast_hw_add.hpp  bcast_hw_add_math.cpp  bcast_hw_add_pack.cpp  bcast_hw_add_unpack.cpp  bcast_w_add.hpp  bcast_w_add_math.cpp  bcast_w_add_unpack.cpp  binary_add.hpp  binary_add_math.cpp  binary_add_pack.cpp  binary_add_unpack.cpp  kernels.cpp  kernels.hpp  kernels_math.hpp  kernels_pack.hpp  kernels_unpack.hpp  machine.cpp  machine.hpp  matmul.hpp  matmul_math.cpp  matmul_pack.cpp  matmul_unpack.cpp  reduce_h_sum.hpp  reduce_h_sum_math.cpp  reduce_h_sum_unpack.cpp  reduce_hw_sum.hpp  reduce_hw_sum_math.cpp  reduce_hw_sum_pack.cpp  reduce_hw_sum_unpack.cpp  reduce_w_sum.hpp  reduce_w_sum_math.cpp  reduce_w_sum_pack.cpp  reduce_w_sum_unpack.cpp  sfpu.hpp  sfpu_math.cpp  sfpu_pack.cpp  (+11 more)
tensix/whb0/src/demo/llk_ref/: CMakeLists.txt  bcast_h_add.hpp  bcast_h_add_math.cpp  bcast_h_add_pack.cpp  bcast_hw_add.hpp  bcast_hw_add_math.cpp  bcast_hw_add_pack.cpp  bcast_hw_add_unpack.cpp  bcast_w_add.hpp  bcast_w_add_pack.cpp  bcast_w_add_unpack.cpp  binary_add.hpp  binary_add_unpack.cpp  kernels.cpp  kernels.hpp  kernels_pack.hpp  machine.cpp  machine.hpp  main.cpp  matmul.hpp  matmul_math.cpp  matmul_unpack.cpp  reduce_h_sum.hpp  reduce_h_sum_pack.cpp  reduce_h_sum_unpack.cpp  reduce_hw_sum.hpp  reduce_hw_sum_math.cpp  reduce_hw_sum_pack.cpp  reduce_hw_sum_unpack.cpp  reduce_w_sum.hpp  reduce_w_sum_math.cpp  reduce_w_sum_pack.cpp  reduce_w_sum_unpack.cpp  sfpu.hpp  sfpu_math.cpp  sfpu_pack.cpp  tilize.hpp  tilize_math.cpp  tilize_pack.cpp  tilize_unpack.cpp  (+5 more)
tensix/whb0/src/demo/sfpi_gen/: CMakeLists.txt  main.cpp  sfpi_test.hpp  spfi_test.cpp
tensix/whb0/src/llk/: CMakeLists.txt
tensix/whb0/src/llk/api/: CMakeLists.txt  circular_buffer.h  ckernel.cpp  ckernel.h  ckernel_addrmod.cpp  ckernel_addrmod.h  ckernel_asm.h  ckernel_core.h  ckernel_defs.h  ckernel_gpr_map.h  ckernel_instr_params.h  ckernel_mem_ptr.cpp  ckernel_mem_ptr.h  ckernel_ops.cpp  ckernel_ops.h  ckernel_sfpi.cpp  ckernel_sfpi.h  ckernel_sfpu.h  ckernel_sfpu_cdf.h  ckernel_sfpu_converter.h  ckernel_sfpu_elu.h  ckernel_sfpu_erf_erfc.h  ckernel_sfpu_erfinv.h  ckernel_sfpu_exp.h  ckernel_sfpu_gelu.h  ckernel_sfpu_i0.h  ckernel_sfpu_isinf_isnan.h  ckernel_sfpu_logical_not_noti.h  ckernel_sfpu_recip.h  ckernel_sfpu_relu.h  ckernel_sfpu_sqrt.h  ckernel_sfpu_trigonometry.h  ckernel_structs.h  ckernel_template.cpp  ckernel_template.h  ckernel_thread.cpp  ckernel_thread.h  cmath_common.cpp  cmath_common.h  cpack_common.cpp  (+4 more)
tensix/whb0/src/llk/basic/: CMakeLists.txt  common.hpp  defs.hpp  kernel_structs.hpp  math.hpp  math_api.cpp  math_common.cpp  math_eltwise_binary.cpp  math_eltwise_unary_datacopy.cpp  math_eltwise_unary_sfpu.cpp  math_matmul.cpp  math_reduce.cpp  pack.cpp  pack.hpp  pack_api.cpp  pack_common.cpp  pack_reduce.cpp  sfpu.cpp  unpack.hpp  unpack_a.cpp  unpack_ab.cpp  unpack_ab_matmul.cpp  unpack_api.cpp  unpack_common.cpp  unpack_reduce.cpp  unpack_tilize.cpp  unpack_untilize.cpp
tensix/whb0/src/llk/compute/: CMakeLists.txt  bcast.h  cb_api.h  common.h  common_globals.h  eltwise_binary.h  eltwise_unary.h  matmul.h  pack.h  reduce.h  reg_api.h  sfpu.h  syntax_math.cpp  syntax_test.h  syntax_unpack.cpp  tile_move_copy.h  tilize.h  transpose_wh.h  unpack.h
tensix/whb0/src/llk/ref/: CMakeLists.txt  llk_defs.h  llk_eltwise_unary_sfpu_exp.h  llk_io_pack.h  llk_io_unpack.h  llk_math_common.h  llk_math_eltwise_binary.h  llk_math_eltwise_unary_datacopy.h  llk_math_eltwise_unary_sfpu.h  llk_math_eltwise_unary_sfpu_0_param.h  llk_math_eltwise_unary_sfpu_1_param.h  llk_math_eltwise_unary_sfpu_elu.h  llk_math_eltwise_unary_sfpu_erf_erfc.h  llk_math_eltwise_unary_sfpu_erfinv.h  llk_math_eltwise_unary_sfpu_exp.h  llk_math_eltwise_unary_sfpu_gelu.h  llk_math_eltwise_unary_sfpu_i0.h  llk_math_eltwise_unary_sfpu_init.h  llk_math_eltwise_unary_sfpu_isinf_isnan.h  llk_math_eltwise_unary_sfpu_logical_not_noti.h  llk_math_eltwise_unary_sfpu_recip.h  llk_math_eltwise_unary_sfpu_relu.h  llk_math_eltwise_unary_sfpu_sqrt.h  llk_math_eltwise_unary_sfpu_trigonometry.h  llk_math_matmul.h  llk_math_reduce.h  llk_pack.h  llk_pack_common.h  llk_param_structs.h  llk_unpack_a.h  llk_unpack_ab.h  llk_unpack_ab_matmul.h  syntax_math.cpp  (+7 more)
tensix/whb0/src/minicoro/: CMakeLists.txt  minicoro.h
tensix/whb0/src/r37/: CMakeLists.txt
tensix/whb0/src/schedule/: CMakeLists.txt  minicoro.cpp  minicoro.hpp  minicoro_impl.cpp  schedule.cpp  schedule.hpp
tensix/whb0/src/sfpi/: CMakeLists.txt  code.cpp  code_expand.cpp  code_gen.cpp  code_reg.cpp  graph.cpp  graph_fmt.cpp  hw_dump.cpp  hw_dump.hpp  ir.cpp  ir_cc.cpp  ir_expand.cpp  rvtt.cpp  rvtt.hpp  sfpi.hpp  sfpi_fp16.hpp  sfpi_hw.hpp  sfpi_impl.hpp  sfpi_lib.hpp
tensix/whb0/src/system/: CMakeLists.txt
(+122 files in other folders)
