cmake_minimum_required(VERSION 3.10)

project(tensix-isa-simulator-whb0
    LANGUAGES CXX
    VERSION 0.0.1
    DESCRIPTION ""
)

set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

set(WHB0_LIB_PREFIX "whb0_" CACHE STRING "Prefix for library outputs." FORCE)
set(WHB0_BIN_PREFIX "whb0_" CACHE STRING "Prefix for binary executable outputs." FORCE)

set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)

add_subdirectory(src)
